change in @media width

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    Rated 5 Stars in Reviews</p>
+                    Rated 5 Stars in Reviews
+                </p>
                 <p class="rating-2">&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
