--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    Rated 5 Stars in Reviews
+                    <span class="rating-msg">Rated 5 Stars in Reviews</span>
                 </p>
                 <p class="rating-2">&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="fa fa-star checked"></span>
@@ -37,7 +37,8 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    Rated 5 Stars in Report Guru</p>
+                    <span class="rating-msg">Rated 5 Stars in Reviews</span>
+                </p>
                 <p class="rating-3">&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -45,7 +46,8 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    Rated 5 Stars in BestTech</p>
+                    <span class="rating-msg">Rated 5 Stars in Reviews</span>
+                </p>
             </div>
         </div>
 
