--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span class="rating-msg">Rated 5 Stars in Reviews</span>
+                    <span class="rating-msg">Rated 5 Stars in Report Guru</span>
                 </p>
                 <p class="rating-3">&nbsp;&nbsp;&nbsp;&nbsp;
                     <span class="fa fa-star checked"></span>
@@ -46,7 +46,7 @@
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span class="rating-msg">Rated 5 Stars in Reviews</span>
+                    <span class="rating-msg">Rated 5 Stars in BestTech</span>
                 </p>
             </div>
         </div>
